Bug 150642 - FILEOPEN DOCX Table structure destroyed if cell with vertical text direction exists
Summary: FILEOPEN DOCX Table structure destroyed if cell with vertical text direction ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: high normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.4.2
Keywords: bibisected, bisected, filter:docx, implementationError
: 151055 151130 (view as bug list)
Depends on:
Blocks: DOCX-Tables
  Show dependency treegraph
 
Reported: 2022-08-28 12:52 UTC by Regina Henschel
Modified: 2022-09-27 12:03 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By: Mark Hung


Attachments
Table with all writing directions in cells (38.15 KB, application/zip)
2022-08-28 12:52 UTC, Regina Henschel
Details
Table compared in MSO and LO (63.13 KB, image/webp)
2022-09-08 08:58 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2022-08-28 12:52:37 UTC
Created attachment 182053 [details]
Table with all writing directions in cells

Open attached file in Word to see, how it looks.

Open attached file in current daily. Notice that the rows with vertical directions tbRl and tbRlV are destroyed.

I see the error in Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: d05c176cc022f1b771f7c064f6ce74e9f8c27a1b
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL

The structure was OK in Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 4e2ce2a460458f17ee4360c45a2da2fc4b4d753e
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL

(The fact, that LO is not able to render all kind of directions is a different problem and not the topic here.)
Comment 1 raal 2022-09-07 19:16:54 UTC
Confirm with Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 64f673238cf9b645a751e8f8137ca14e595a779a
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 2 raal 2022-09-07 19:22:01 UTC
This seems to have begun at the below commit.
Adding Cc: to Miklos Vajna ; Could you possibly take a look at this one?
Thanks
 5b1e33757b2f4bd329a59bcac9c97c5047b618d3 is the first bad commit
commit 5b1e33757b2f4bd329a59bcac9c97c5047b618d3
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Mon Aug 15 11:45:05 2022 +0200

    source 1bf82b26aea3a403920a64cdfcb4671c947c7a01

https://git.libreoffice.org/core/+/1bf82b26aea3a403920a64cdfcb4671c947c7a01
Comment 3 Miklos Vajna 2022-09-08 06:35:46 UTC
Did you mistag this bisect result? The referenced commit is authored by Mark Hung, not me. Thanks.
Comment 4 Timur 2022-09-08 08:58:16 UTC
Created attachment 182303 [details]
Table compared in MSO and LO

I confirm the bibisect result. Mark, please see this.
Comment 5 Miklos Vajna 2022-09-08 10:15:30 UTC
I just re-reviewed the above patch and using the higher level rectangle functions where the frames are already swapped is obviously buggy, so that fix is OK, I would say. I suspect what happened is some older breakage is now much more visible. Adjusting keywords accordingly.

But fixing the bug would be obviously still useful. :-)
Comment 6 Commit Notification 2022-09-20 16:48:19 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/11ec622b8405dcaabc359e3d6e38c8a9142dad6b

tdf#150642 fix table layout with vertical writing.

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Kevin Suo 2022-09-21 04:57:24 UTC
*** Bug 151055 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2022-09-21 10:55:22 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/5e3abdf6ecded4f69bc7e1bdfb9dc8300f30685d

tdf#150642 fix table layout with vertical writing.

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Buovjaga 2022-09-22 18:07:02 UTC
*** Bug 151130 has been marked as a duplicate of this bug. ***
Comment 10 Kevin Suo 2022-09-23 04:48:09 UTC
Confirm fixed on master and 7.4.3+.