tdf#150642 fix table layout with vertical writing.

Revert part of 1bf82b26ae3.

N | V | WAS         | 1bf82b26aea3 | WAS                  | 1bf82b26aea3 |
-------------------------------------------------------------------------------
F | F | fnRectHori  | fnRectHori   | fnAddRight/fnSubLeft |              |
F | T | fnRectVert  | fnRectVert   | fnAddRight/fnSubLeft |		 |
T | F | fnRectVert  | fnRectHori   | fnAddRight/fnSubLeft | fnAddBottom  |
T | T | fnRectHori  | fnRectVert   | fnAddRight/fnSubLeft | fnAddBottom  | *

*: the case fixed in this patch.

Ref:

commit 1bf82b26aea3a403920a64cdfcb4671c947c7a01
Author: Mark Hung <marklm9@gmail.com>
Date:   Sun Aug 14 15:23:14 2022 +0800

    tdf#135991 fix unexpected hidden RTL sections.

Change-Id: I1e30c277dd03369bef0a6930b3d3534b7d57a640
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139777
Tested-by: Jenkins
Reviewed-by: Mark Hung <marklh9@gmail.com>